fix: header elements alignment

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -134,6 +134,7 @@
         // height: 72px;
         font-size: 18px;
         &__container {
+            justify-content: center;
             padding: 10px;
         }
         &__left-wrapper {
